	- Tweak the descriptions of some shortcut keys to make them more
	  uniform. (Benno Schulenberg, minor tweaks by DLR)
	- Shorten the "Where is Next" shortcut name to fit on the screen
	  after adding Meta-\ (Meta-|) and Meta-/ (Meta-?). (DLR)
	- Lengthen the "UnCut Txt" shortcut name to "UnCut Text", as
	  there's enough room to display it unabbreviated. (DLR)
  toggle_init()
	- In the global toggle list, move the "Constant cursor position
	  display" toggle up to after the "Use more space for editing"
	  toggle, for consistency. (DLR)
	- Reorganize the global toggle list to make it easier for new
	  users.  It now lists toggles that affect the way things are
	  displayed, followed by toggles that affect editing, followed
	  by toggles that have to do with peripheral things. (DLR,
	  suggested by Benno Schulenberg)
- help.c:
  do_help()
	- Call get_shortcut() after getting input, so that we only have
	  to check for a main shortcut key instead of both it and all of
	  its equivalents. (DLR)
	- Clean up the handling of NANO_REFRESH_KEY. (DLR)
	- Remove redundant key checks. (DLR)
  help_init()
	- If we have at least two entries' worth of blank space, use it
	  to display more of "^Space" and "M-Space". (DLR, suggested by
	  Benno Schulenberg)
	- Add various wording fixes. (DLR)
  parse_help_input()
	- Add Space and - as aliases for PageDown and PageUp, for
	  consistency with the file browser. (DLR, suggested by Benno
	  Schulenberg)
	- Remove redundant key checks. (DLR)
- nano.c:
  print1opt_full()
	- Rename to print_opt_full(), for consistency. (DLR)
  usage()
	- Fix inaccuracies in the usage example. (DLR)
	- Put command line arguments in <>'s instead of []'s, as the
	  latter imply that the arguments are optional when they aren't.
	  (DLR, found by Benno Schulenberg)
  renumber()
	- Remove invalid assert. (DLR, found by Filipe Moreira)
  do_input()
	- Remove redundant check for allow_funcs' being TRUE when we get
	  KEY_MOUSE. (DLR)